<resources>
    <string name="app_name">AndroidDevelop</string>
    <string name="nav_header_title">Android开发收录</string>
    <string name="component_details">系统组件</string>
    <string name="custom_view">自定义View</string>
    <string name="home">首页</string>
    <string name="my">我的</string>
    <string name="test">测试</string>
    <string name="set_head">设置头像</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="animation">动画</string>
</resources>
